--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,9 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com/public.ecr.aws/e8e9p4c4/library
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library
   build:
     commands:
       - echo "Building Docker image..."
-      - docker build -t 825312798806.dkr.ecr.ap-south-1.amazonaws.com/public.ecr.aws/e8e9p4c4/library:latest .
-      - docker push 825312798806.dkr.ecr.ap-south-1.amazonaws.com/public.ecr.aws/e8e9p4c4/library:latest
+      - docker build -t 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library:latest .
+      - docker push 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library:latest
