--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library
+      - aws ecr get-login-password --region ap-south-1 --no-include-email | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library
   build:
     commands:
       - echo "Building Docker image..."
