--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,15 +1,34 @@
+
 version: 0.2
 
 phases:
   install:
     runtime-versions:
       docker: 18
+
   pre_build:
     commands:
       - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region ap-south-1 --no-include-email | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 825312798806.dkr.ecr.ap-south-1.amazonaws.com
+      - REPOSITORY_URI=public.ecr.aws/e8e9p4c4/aws_ecs_docker
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:-latest}
+
   build:
     commands:
-      - echo "Building Docker image..."
-      - docker build -t 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library:latest .
-      - docker push 825312798806.dkr.ecr.ap-south-1.amazonaws.com/library:latest
+      - echo "Build started on $(date)"
+      - echo "Building the Docker image..."
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+
+  post_build:
+    commands:
+      - echo "Build completed on $(date)"
+      - echo "Pushing Docker images to Amazon ECR..."
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo "Writing image definitions file..."
+      - printf '[{"name":"exp-code-pipeline","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+
+artifacts:
+  files: imagedefinitions.json
